tests/snapshots/create__create_local_rename_tree.snap
---
source: tests/create.rs
expression: tree_manifest(&ws)
---
entries:
  ".agent-workspace":
    kind: dir
  ".agent-workspace/base":
    kind: file
    sha256: 01666ec060466c14b9fa06c613fbac449163f2a2017558fe16526209ab78c6b0
    size: 8
  ".agent-workspace/name":
    kind: file
    sha256: 5a2808dbe2e89a097cba18606fc1926842f12aca06e59c6c7446c9d2851782f0
    size: 7
  docs:
    kind: dir
  docs/INFO.md:
    kind: file
    sha256: 4a28fc250c09e1f28c9f37486fca6db3c7a4ee707373216f6f7bd62ade5d9330
    size: 8
  repo1:
    kind: dir
  repo1/.git:
    kind: dir
  repo1/README.md:
    kind: file
    sha256: a2deec2d36c692b4561fab2788042b3043b734987ed34d119c1fce43abec78a5
    size: 8
